Replaced singleton with Set.of() and Map.of() in BrokerImpl.java